<resources>
    <!-- Robert Jackson's strings -->
    <string name="app_name">FinalProject</string>
    <string name="ProjectForm">Project Form</string>
    <string name="StudentForm">Student Form</string>
    <string name="ProjectInsert">Insert Project</string>
    <string name="ProjectDelete">Delete Project</string>
    <string name="StudentInsert">Insert Student</string>
    <string name="StudentDelete">Delete Student</string>
    <string name="ButtonRefresh">Refresh</string>
    <string name="pHint1">ProjectName</string>
    <string name="pHint2">CourseCode</string>
    <string name="pHint3">ProjectStart yyyy/MM/dd</string>
    <string name="pHint4">ProjectEnd yyyy/MM/dd</string>
    <string name="sHint1">ProjectName</string>
    <string name="sHint2">FirstName</string>
    <string name="sHint3">LastName</string>
    <string name="TeamName1">Robert Jackson: Project Planner</string>
    <string name="TeamName2">Matt White: Professor Helper</string>
    <string name="TeamName3">Tongyu Wang: Schedual Planner</string>
    <string name="TeamName4">Toan Trinh: Deadlines and Assignments</string>
    <string name="ProjectName">Time Management Project</string>
    <string name="alert">Exit current activity?</string>

<!-- Tony's strings -->

    <string name="app_name2">Algonguin TimeSchedule</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="day">DAY     :</string>
    <string name="startat">START AT:</string>

    <string name="howlong">Choose how long does this course take::</string>
    <string name="onehour">1 hour</string>
    <string name="twohour">2 hours</string>


    <string name="coursecode">Please Input the course code:</string>
    <string name="coursename">Please Input the course name: </string>
    <string name="classroom">Please Input the class room: </string>
    <string name="professor">Please Input professor name: </string>
    <string name="addedit">Add/Edit a course</string>
    <string name="delete">Delete</string>
    <string name="rtn">Return</string>



    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <string name="author">Author name</string>
    <string name="version">Verison number</string>
    <string name="instruction">App Instruction</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>

    <string name="code">Course Code : </string>
    <string name="name">Course Name : </string>
    <string name="locatoin">Location  :</string>
    <string name="instructor">Instructor :</string>

    <string name="instru">"                     Instructions:
        1. double Click the time slot and add/edit/delete the course, single click course to show the details with toast\n
        2. click the left top AC logo to see the time menu in the expandable list view.\n
        3. double click the list item to add/edit/delete course. From List, click the logo to go back to the time table.\n\n
            Written by Tongyu Wang\n
            CST2355 Final Project\n
            Time Schedule Version 1</string>

    <!-- Matt's strings -->


    <string name="app_name3">ProfDatabase</string>
    <string name="action_settings">Settings</string>
    <string name="title_professor_list">Professors</string>
    <string name="title_professor_detail">Professor Detail</string>

    <string name="professor_name_hint">Professor\'s Name</string>
    <string name="class_time_hint">Class Time</string>
    <string name="class_name_hint">Class Name</string>
    <string name="class_day_hint">Days of the week</string>
    <string name="add_button_text">ADD</string>
    <string name="delete_button_text">DELETE</string>
    <string name="cancel_button_text">CANCEL</string>

    <!-- Toans Strings -->
    <string name="app_name4">Final_Project</string>
    <string name="dialog_button_add">Add</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="taskHint">Enter your task.</string>
    <string name="dateHint">Due date (mm/dd).</string>
    <string name="dialog_button_yes">YES</string>
    <string name="dialog_button_no">NO</string>

</resources>

