<?xml version="1.0" encoding="utf-8"?>


<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        xmlns:adnroid="http://schemas.android.com/apk/res-auto"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.wty.timeschedule.InputActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/day"
            android:textSize="23dp"
            android:id="@+id/textViewDay"
            android:background="@color/abc_search_url_text_normal"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/editTextDay"
            android:textSize="23dp"
            android:layout_toRightOf="@+id/textViewDay"
            android:background="@color/abc_search_url_text_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/startat"
            android:id="@+id/textViewStart"
            android:layout_below="@+id/textViewDay"
            android:textSize="23dp"
            android:background="@color/abc_search_url_text_normal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/editTextStart"
            android:textSize="23dp"
            android:layout_toRightOf="@+id/textViewStart"
            android:layout_below="@+id/textViewDay"
            android:background="@color/abc_search_url_text_normal"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:id="@+id/radiohourgroup"
            android:layout_below="@+id/textViewStart">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howlong"
                android:id="@+id/textView0"
                android:layout_below="@+id/radiohourgroup"/>

            <RadioButton android:id="@+id/radio_1h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onehour"
                android:checked="true"
                />
            <RadioButton android:id="@+id/radio_2h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twohour"
                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coursecode"
            android:id="@+id/textView1"
            android:layout_below="@+id/radiohourgroup"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText1"
            android:layout_below="@+id/textView1" />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coursename"
            android:id="@+id/textView2"
            android:layout_below="@+id/editText1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_below="@+id/textView2"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/classroom"
            android:id="@+id/textView3"
            android:layout_below="@+id/editText2"
            android:layout_alignParentStart="true" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:layout_below="@+id/textView3"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/professor"
            android:id="@+id/textView4"
            android:layout_below="@+id/editText3"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:layout_below="@+id/textView4"
            android:layout_alignParentEnd="true" />


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/addedit"
            android:id="@+id/button"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/editText4"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/buttonDel"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/rtn"
            android:id="@+id/buttonRtn"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/buttonDel"/>

    </RelativeLayout>
</ScrollView>
