<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.robertjackson.finalproject.ProjectFormActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="60dp"
        tools:context="com.example.robertjackson.finalproject.ProjectFormActivity">

        <EditText
            android:id="@+id/pEt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/pHint1"
            android:inputType="textPersonName"
            android:textColor="#c8e6c9" />

        <EditText
            android:id="@+id/pEt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/pEt1"
            android:ems="10"
            android:hint="@string/pHint2"
            android:inputType="textPersonName"
            android:textColor="#c8e6c9" />

        <EditText
            android:id="@+id/pEt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/pEt2"
            android:ems="10"
            android:hint="@string/pHint3"
            android:inputType="textPersonName"
            android:textColor="#c8e6c9" />

        <EditText
            android:id="@+id/pEt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/pEt3"
            android:ems="10"
            android:hint="@string/pHint4"
            android:inputType="textPersonName"
            android:textColor="#c8e6c9" />

        <Button
            android:id="@+id/projectFormButton1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/ProjectInsert" />

        <Button
            android:id="@+id/projectFormButton2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/projectFormButton1"
            android:layout_alignParentStart="true"
            android:text="@string/ProjectDelete" />

        <ProgressBar
            android:id="@+id/progressBarProject"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/projectFormButton2"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>