<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.robertjackson.finalproject.MainMenu_Project_Planner">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.robertjackson.finalproject.MainMenu_Project_Planner">

        <TextView
            android:text="@string/TeamName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_alignEnd="@+id/textView5"
            android:layout_marginTop="24dp"
            android:id="@+id/textView6"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:fontFamily="serif" />

        <TextView
            android:text="@string/TeamName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_alignEnd="@+id/textView6"
            android:layout_marginTop="20dp"
            android:id="@+id/textView7"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:fontFamily="serif" />

        <TextView
            android:text="@string/TeamName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:layout_marginTop="21dp"
            android:id="@+id/textView8"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:fontFamily="serif" />

        <TextView
            android:text="@string/TeamName4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="147dp"
            android:id="@+id/textView5"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/ProjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:id="@+id/textView9"
            android:textSize="24sp"
            android:fontFamily="cursive"
            android:typeface="serif"
            android:lineSpacingExtra="8sp"
            android:textStyle="normal|bold"
            android:textAlignment="center" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>