<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.robertjackson.finalproject.ProfessorListActivity">


    <ListView android:id="@+id/profListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/profNameEdit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="Professor\'s Name"
        android:ems="10"
        android:id="@+id/profNameEdit"
        android:layout_above="@+id/classNameEdit"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="Class Name"
        android:ems="10"
        android:id="@+id/classNameEdit"
        android:layout_above="@+id/classTimeEdit"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/classTimeEdit" />

    <Button
        android:text="@string/add_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addProf"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/cancel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/classTimeEdit"
        android:hint="Class Time"
        android:layout_above="@+id/classDaysEdit"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/classDaysEdit"
        android:hint="Days of the Week"
        android:layout_above="@+id/cancel"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <Button
        android:id="@+id/deleteButton"
        android:text="@string/delete_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/cancel_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:layout_above="@+id/deleteButton"
        android:layout_alignParentStart="true" />
</RelativeLayout>
